src/App.css
.App {
  text-align: center;
  background: linear-gradient(90deg, rgba(32,43,62,1), rgba(48,62,82,1));
  color: white;
}

.App-header {
  background: linear-gradient(45deg, rgba(0,255,61,0.3) 0%, rgba(255,0,202,0.3) 100%);
  min-height: 10vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-header a:visited {
  color: rgba(0,255,61,0.7);
}

.App-header a:hover {
  color: rgba(255,0,202,0.7);
}

.Container {
  min-height: 90vh;
  max-width: 90vw;
  padding: 0 0.5rem;
  margin: 0 10vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
}

.InputContainer {
  margin: 30px 0 10px 0;
  width: 100%;
}

.InputContainer > form {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.InputContainer > form > label {
  font-size: calc(5px + 1vmin);
  padding: 10px 0;
}

.SearchBar {
  width: 60%;
  align-self: center;
  box-shadow: rgba(24, 24, 27, 0.57) 7px 8px 17px -2px;
}

.HiddenSubmit {
  display: none;
}

.dropbtn {
  border: none;
  cursor: pointer;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdownList {
  display: none;
  position: absolute;
  min-width: 160px;
  max-height: 300px;
  overflow: auto;
  z-index: 1;
  background-color: #f1f1f1;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}

.dropdownList button {
  display: block;
  text-align: left;
  padding: 12px 16px;
  color: black;
  border: none;
  width: 100%;
}

.dropdownList button:hover {
  background-color: #ddd;
}

.show {
  display: block;
}

.ApiError {
  font-size: 3rem;
  color: red;
}

.ResultsContainer {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.ResultsContainer ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.Grid {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.Card {
  margin: 1rem;
  padding: 1.5rem;
  border-radius: 10px;
  width: 30%;
  max-height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  background-color: rgb(51,65,85);
  box-shadow: rgba(24, 24, 27, 0.57) 7px 8px 17px -2px;
}

.Card > video {
  height: 80%;
}

@media (max-width: 768px) {
  .Card {
    width: 90%;
  }
}

.Card > button {
  margin-top: 10px;
}

button {
  width: auto;
  align-self: center;
  font-size: calc(5px + 1vmin);
}

.TopButtonContainer {
  padding-top: 20px;
}

.BottomButtonContainer {
  padding-bottom: 20px;
}

.TopButtonContainer > button, .BottomButtonContainer > button {
  margin: 0 10px;
}

